fix alignment problem on search.

--- a/go/base/static/css/vumigo.less
+++ b/go/base/static/css/vumigo.less
@@ -161,6 +161,10 @@ a:link, button {
     .right {
       padding:0 20px;
       overflow:hidden;
+
+      .navbar-search {
+        margin-top:0;
+      }
     }
   }
 
